--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HosBeds",
+  "name": "HosBeds Admin",
   "version": "0.0.1",
   "author": "TeeTask",
   "homepage": "https://teetask.com/",
@@ -44,7 +44,6 @@
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "core-js": "^2.5.4",
-    "ionic4-auto-complete": "^2.8.2",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.1",
     "time-ago-pipe": "^1.3.2",
